# Restaurant-Recommender

./: .gitignore  README.md  Res_recom.ipynb  app.py  cleaned_data.csv  requirements.txt  results.html  svd_model.pkl  tempCodeRunnerFile.py  tfidf_model.pkl  ui.html
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: EmptyState.jsx  Grainient.css  Grainient.jsx  HeroSection.jsx  LoadingCard.jsx  RecommendationTable.jsx  RestaurantCard.jsx  ResultsSection.jsx  SearchPanel.jsx
templates/: results.html  ui.html
