[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
